--- a/FHL Project/FHL Project/Views/Index.cshtml
+++ b/FHL Project/FHL Project/Views/Index.cshtml
@@ -1,4 +1,16 @@
-﻿@page
-@model IndexModel
-@{
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+using Microsoft.AspNetCore.Mvc;
+using Microsoft.AspNetCore.Mvc.RazorPages;
+
+namespace FHLProject.Views
+{
+    public class IndexModel : PageModel
+    {
+        public void OnGet()
+        {
+        }
+    }
 }
